# LSTM_on_Create2

./: Readme.md
NavDatabases/: check_db-12-5-3-10-9-38  (+8 more)
src/nav_setup/: CMakeLists.txt  frames.gv  package.xml
src/nav_setup/config/gazebo/: create_2_gazebo.xacro  create_base_hokuyo.xacro  create_hokuyo_gazebo.xacro
src/nav_setup/config/robot/: create_2.xacro  create_2_desc.xml  create_base_hokuyo.xacro
src/nav_setup/launch/: navstack_create.launch  navstack_create_teleop.launch  navstack_gazebo.launch  navstack_gazebo_teleop.launch  robot_gazebo.launch  robot_setup.launch  slam_gmapping_create.launch  slam_gmapping_gazebo.launch  supervisor.launch  supervisor_blind.launch  supervisor_blind_teleop.launch  supervisor_gazebo.launch
src/nav_setup/params/: Astar_local_planner.yaml  base_global_planner.yaml  base_local_planner.yaml  costmap_common.yaml  dwa_local_planner.yaml  global_costmap.yaml  global_planner.yaml  local_costmap.yaml  robot.yaml
src/nav_setup/rviz_config/: attempt1.rviz  hector_mapping_withmodel.rviz  single_robot.rviz  single_robot_planning.rviz
src/neural_network_planner/: CMakeLists.txt
src/neural_network_planner/NetModels/: Test_LSTM_stack-1-128_2-24-20-35  Test_LSTM_stack-2-16_2-25-2-44  Test_LSTM_stack-2-16_2-25-4-18  Test_LSTM_stack-2-16_2-25-4-40  Test_LSTM_stack-2-16_2-25-4-41  Test_LSTM_stack-2-16_2-25-4-45  Test_LSTM_stack-2-16_2-25-4-46  Test_LSTM_stack-2-16_2-25-4-50  Test_LSTM_stack-2-32_2-26-12-48  Test_LSTM_stack-2-32_2-26-12-56  Test_LSTM_stack-2-32_2-26-13-18  Test_LSTM_stack-2-8_3-12-0-41  Test_LSTM_stack-2-8_3-12-1-11  Test_LSTM_stack-3-16_2-28-21-33  Test_LSTM_stack-3-16_2-28-21-38  Test_LSTM_stack-3-16_2-28-21-41  Test_LSTM_stack-3-16_2-28-21-43  Test_LSTM_stack-3-16_2-28-21-53  Test_LSTM_stack-3-16_2-28-21-54  Test_LSTM_stack-3-16_2-28-21-58  Test_LSTM_stack-3-16_2-28-21-59  Test_LSTM_stack-3-64_2-27-23-13  Test_LSTM_stack-3-64_2-27-23-18  Test_LSTM_stack-3-64_2-27-23-21  Test_LSTM_stack-3-64_2-27-23-27  Test_LSTM_stack-3-64_2-27-23-49  Test_LSTM_stack-3-64_2-27-5-17  Test_LSTM_stack-3-64_2-27-5-18  Test_LSTM_stack-bn-7-128_2-8-12-42  Test_LSTM_stack-bn-7-128_2-8-12-48  Test_LSTM_stack-bn-7-128_2-8-13-13  Test_LSTM_stack-bn-7-128_2-8-13-24  Test_LSTM_stack-bn-7-128_2-8-13-26  Test_LSTM_stack-bn-7-128_2-8-13-33  Test_LSTM_stack-bn-7-128_2-8-13-34  Test_LSTM_stack-bn-7-128_2-8-13-38  Test_LSTM_stack-bn-7-24_2-8-13-41  Test_LSTM_stack-bn-7-24_2-8-13-52  Test_LSTM_stack-bn-7-24_2-8-13-56  Test_LSTM_stack-bn-7-24_2-8-13-58  (+85 more)
src/neural_network_planner/NetModels/LSTM/: deep_lstm_solver.prototxt  deep_mlp_net.prototxt  deep_mlp_solver.prototxt  deep_mlp_testnet.prototxt  deep_stack-bn_net.prototxt  deep_stack-bn_testnet.prototxt  deep_stack-db_net.prototxt  deep_stack-db_testnet.prototxt  deep_stack-drop_net.prototxt  deep_stack-drop_online.prototxt  deep_stack-drop_testnet.prototxt  deep_stack-fc_classnet.prototxt  deep_stack-fc_classonline.prototxt  deep_stack-fc_net.prototxt  deep_stack-fc_online.prototxt  deep_stack-fc_testclassnet.prototxt  deep_stack-fc_testnet.prototxt  deep_stack_net.prototxt  deep_stack_online.prototxt  deep_stack_testnet.prototxt
src/neural_network_planner/NetModels/LSTM/Snapshots/: LSTM_deep-stack-2-16-27-onlyang_iter_100000.caffemodel  LSTM_deep-stack-2-16-27-onlyang_iter_100000.solverstate  LSTM_deep-stack-2-16-27-onlyang_iter_1000000.caffemodel  LSTM_deep-stack-2-16-27-onlyang_iter_1000000.solverstate  LSTM_deep-stack-2-16-27-onlyang_iter_1020000.caffemodel  LSTM_deep-stack-2-16-27-onlyang_iter_1020000.solverstate  LSTM_deep-stack-2-16-27-onlyang_iter_1040000.caffemodel  LSTM_deep-stack-2-16-27-onlyang_iter_1040000.solverstate  LSTM_deep-stack-2-16-27-onlyang_iter_1060000.caffemodel  LSTM_deep-stack-2-16-27-onlyang_iter_1060000.solverstate  LSTM_deep-stack-2-16-27-onlyang_iter_1080000.caffemodel  LSTM_deep-stack-2-16-27-onlyang_iter_1080000.solverstate  LSTM_deep-stack-2-16-27-onlyang_iter_1100000.caffemodel  LSTM_deep-stack-2-16-27-onlyang_iter_1100000.solverstate  LSTM_deep-stack-2-16-27-onlyang_iter_1120000.caffemodel  LSTM_deep-stack-2-16-27-onlyang_iter_1120000.solverstate  LSTM_deep-stack-2-16-27-onlyang_iter_1140000.caffemodel  LSTM_deep-stack-2-16-27-onlyang_iter_1140000.solverstate  LSTM_deep-stack-2-16-27-onlyang_iter_1160000.caffemodel  LSTM_deep-stack-2-16-27-onlyang_iter_1160000.solverstate  LSTM_deep-stack-2-16-27-onlyang_iter_1180000.caffemodel  LSTM_deep-stack-2-16-27-onlyang_iter_1180000.solverstate  LSTM_deep-stack-2-16-27-onlyang_iter_120000.caffemodel  LSTM_deep-stack-2-16-27-onlyang_iter_120000.solverstate  LSTM_deep-stack-2-16-27-onlyang_iter_1200000.caffemodel  LSTM_deep-stack-2-16-27-onlyang_iter_1200000.solverstate  LSTM_deep-stack-2-16-27-onlyang_iter_1220000.caffemodel  LSTM_deep-stack-2-16-27-onlyang_iter_1220000.solverstate  LSTM_deep-stack-2-16-27-onlyang_iter_1240000.caffemodel  LSTM_deep-stack-2-16-27-onlyang_iter_1240000.solverstate  LSTM_deep-stack-2-16-27-onlyang_iter_1260000.caffemodel  LSTM_deep-stack-2-16-27-onlyang_iter_1260000.solverstate  LSTM_deep-stack-2-16-27-onlyang_iter_1280000.caffemodel  (+747 more)
src/neural_network_planner/cmake/: FindLMDB.cmake  FindLevelDB.cmake  FindSnappy.cmake
src/neural_network_planner/config/: build_database.yaml  goal_gen.yaml  online_deploy.yaml  train_database.yaml  train_online.yaml  train_validate.yaml
src/neural_network_planner/include/neural_network_planner/: build_database.h  online_deploy.h  train_database.h  train_online.h  train_validate.h
src/neural_network_planner/launch/: build_database.launch  goal_gen.launch  online_deploy.launch  train_database.launch  train_online.launch  train_validate.launch
src/neural_network_planner/src/: TestReadDB.cpp  build_batch.cpp  build_database.cpp  build_database_node.cpp  goal_generator.cpp  online_deploy.cpp  online_deploy_node.cpp  train_database.cpp  train_database_node.cpp  train_online.cpp  train_online_node.cpp  train_validate.cpp  train_validate_node.cpp
src/robot_setup_tf/: CMakeLists.txt
src/robot_setup_tf/src/: tf_basetolaser_broadcaster.cpp  tf_basetolaser_listener.cpp
(+1050 files in other folders)
